tests/vpol/pod-security-vpol/baseline/disallow-privileged-containers/.chainsaw-test/podcontroller-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment01-new
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: busybox01-init
          image: ghcr.io/kyverno/test-busybox:1.35
          securityContext:
            privileged: false
      containers:
        - name: busybox01
          image: ghcr.io/kyverno/test-busybox:1.35
          securityContext:
            privileged: true
        - name: busybox02
          image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: ghcr.io/kyverno/test-busybox:1.35
          securityContext:
            privileged: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: ghcr.io/kyverno/test-busybox:1.35
        - name: container02
          image: ghcr.io/kyverno/test-busybox:1.35
          securityContext:
            privileged: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: ghcr.io/kyverno/test-busybox:1.35
          securityContext:
            privileged: true
      containers:
        - name: container01
          image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: ghcr.io/kyverno/test-busybox:1.35
        - name: initcontainer02
          image: ghcr.io/kyverno/test-busybox:1.35
          securityContext:
            privileged: true
      containers:
        - name: container01
          image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: ghcr.io/kyverno/test-busybox:1.35
        - name: initcontainer02
          image: ghcr.io/kyverno/test-busybox:1.35
          securityContext:
            privileged: true
      containers:
        - name: container01
          image: ghcr.io/kyverno/test-busybox:1.35
          securityContext:
            privileged: true
