tests/vpol/pod-security-vpol/baseline/disallow-privileged-containers/.chainsaw-test/podcontroller-good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment01-new
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: busybox01-init
          image: ghcr.io/kyverno/test-busybox:1.35
          securityContext:
            privileged: false
      containers:
        - name: busybox01
          image: ghcr.io/kyverno/test-busybox:1.35
          securityContext:
            privileged: false
        - name: busybox02
          image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: ghcr.io/kyverno/test-busybox:1.35
          securityContext:
            privileged: false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: ghcr.io/kyverno/test-busybox:1.35
        - name: container02
          image: ghcr.io/kyverno/test-busybox:1.35
          securityContext:
            privileged: false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: ghcr.io/kyverno/test-busybox:1.35
      containers:
        - name: container01
          image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: ghcr.io/kyverno/test-busybox:1.35
          securityContext:
            privileged: false
      containers:
        - name: container01
          image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment06
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: ghcr.io/kyverno/test-busybox:1.35
          securityContext:
            privileged: false
        - name: initcontainer02
          image: ghcr.io/kyverno/test-busybox:1.35
      containers:
        - name: container01
          image: ghcr.io/kyverno/test-busybox:1.35
          securityContext:
            privileged: false
