tests/vpol/pod-security-vpol/baseline/disallow-privileged-containers/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: disallow-privileged-containers
spec:
  # disable templating because it can cause issues with CEL expressions
  template: false
  steps:
  - name: step-01
    try:
    - apply:
        file: ../policy.yaml
    - patch:
        resource:
          apiVersion: policies.kyverno.io/v1
          kind: ValidatingPolicy
          metadata:
            name: disallow-privileged-containers
          spec:
            validationActions:
             - Deny
    - assert:
        file: policy-ready.yaml
    - sleep:
        duration: 10s
  - name: step-02
    try:
    - apply:
        file: pod-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: pod-bad.yaml
    - apply:
        file: podcontroller-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: podcontroller-bad.yaml
